# CNN-VHDL

./: .gitignore  CMakeLists.txt  README.md  extract_data.sh  generate_sources_4_characterization.sh  run_tests.sh
HW/: CMakeLists.txt  build.sh
HW/cmake/: vhdl_macros.cmake
HW/src/: CMakeLists.txt  utils.vhd
HW/src/math/: CMakeLists.txt  adder.vhd  full_adder.vhd  piped_adder.vhd  sum_reduct.vhd
HW/src/math/EvoApproxLite/: CMakeLists.txt  evo_mul16s.vhd
HW/src/mem/: sipo_register.vhd
HW/src/nn/: CMakeLists.txt
HW/src/nn/cells/: CMakeLists.txt  activation.vhd  data_types.vhd  evo_neuron.vhd  evo_weighted_sum.vhd  weighted_sum.vhd
HW/src/nn/layers/: pooling_layer.vhd
HW/test/: CMakeLists.txt  debug_func.vhd  tb_activation.vhd  tb_adder.vhd  tb_approx_multiplier.vhd  tb_approx_neuron.vhd  tb_evo_neuron.vhd  tb_evo_weighted_sum.vhd  tb_neuromesh_1i2w_linear.vhd  tb_neuromesh_2i1w_linear.vhd  tb_neuromesh_2i1w_rect.vhd  tb_neuromesh_lenet5_conv1.vhd  tb_neuromesh_lenet5_conv2.vhd  tb_neuromesh_lenet5_conv3.vhd  tb_neuromesh_lenet5_fc1.vhd  tb_neuromesh_lenet5_fc2.vhd  tb_neuron.vhd  tb_neuron_4dpa.vhd  tb_sum_reduct.vhd  tb_weighted_sum.vhd
HW/test/oracles/: CMakeLists.txt  tb_approx_weighted_sum.cc  tb_neuromesh_1i2w_linear.cc  tb_neuromesh_2i1w_linear.cc  tb_neuromesh_single_linear.cc  tb_neuron.cc  tb_neuron_pipelined.cc  tb_neuron_scomposto.cc
HW/test/oracles/tb_neuromesh_lenet5_conv1/: conv1.h  main.cc
HW/test/oracles/tb_neuromesh_lenet5_conv2/: conv2.h  main.cc
HW/test/oracles/tb_neuromesh_lenet5_conv3/: conv3.cc  conv3.h  main.cc
HW/test/oracles/tb_neuromesh_lenet5_fc1/: fc1.cc  fc1.h  main.cc
HW/test/oracles/tb_neuromesh_lenet5_fc2/: fc2.cc  fc2.h  main.cc
SW/: neuromesh.h
Summary/: 16bits.csv  16bits_luts.csv  16bits_registers.csv  8bits.csv  plot.py
Summary/Mult-Only/: results.csv
SynthResults/ASIC/: conf0.csv  conf1.csv  conf1.txt  conf2.csv  conf2.txt  conf3.csv  conf4.csv  conf4.txt  conf5.csv  conf6.csv  conf7.csv  conf7.txt  conf8.csv  conf9.csv  configs.txt  plot.py  summary.csv
SynthResults/ASIC/16_bit_120_1_1_approx_1/: power_16_bit_120_1_1_approx_1.rep
SynthResults/ASIC/16_bit_120_1_1_approx_2/: cell_16_bit_120_1_1_approx_2.rep  power_16_bit_120_1_1_approx_2.rep  timing_16_bit_120_1_1_approx_2.rep
SynthResults/ASIC/16_bit_120_1_1_approx_5/: cell_16_bit_120_1_1_approx_5.rep
SynthResults/ASIC/16_bit_120_1_1_approx_6/: power_16_bit_120_1_1_approx_6.rep
SynthResults/ASIC/16_bit_120_1_1_approx_9/: power_16_bit_120_1_1_approx_9.rep
SynthResults/ASIC/16_bit_1_5_5_approx_2/: cell_16_bit_1_5_5_approx_2.rep
SynthResults/ASIC/16_bit_1_5_5_approx_3/: cell_16_bit_1_5_5_approx_3.rep  power_16_bit_1_5_5_approx_3.rep  timing_16_bit_1_5_5_approx_3.rep
SynthResults/ASIC/16_bit_1_84_1_approx_0/: cell_16_bit_1_84_1_approx_0.rep  power_16_bit_1_84_1_approx_0.rep  timing_16_bit_1_84_1_approx_0.rep
SynthResults/ASIC/16_bit_6_5_5_approx_5/: power_16_bit_6_5_5_approx_5.rep  timing_16_bit_6_5_5_approx_5.rep
SynthResults/ASIC/16_bit_6_5_5_approx_9/: power_16_bit_6_5_5_approx_9.rep  timing_16_bit_6_5_5_approx_9.rep
SynthResults/FPGA/AxCircuits/: FinalPopulation.csv  Front.csv  plot.py
SynthResults/FPGA/Mult-Only/: plot.py
SynthResults/LeNet5/ASIC/Comparison/: dominance.py  evoapprox_summary.csv  plot.py  scaling_summary.csv
SynthResults/LeNet5/ASIC/EvoApprox/: conf0.csv  conf0.txt  conf1.csv  conf10.txt  conf2.csv  conf3.csv  conf3.txt  conf4.csv  conf4.txt  conf5.csv  conf5.txt  conf6.csv  conf6.txt  conf7.csv  conf8.csv  conf8.txt  conf9.csv  extract_data.sh  plot.py  summary.csv
SynthResults/LeNet5/ASIC/PrecisionScaling/: conf0.csv  conf0.txt  conf1.csv  conf1.txt  conf2.csv  conf2.txt  conf3.csv  conf3.txt  conf4.csv  conf4.txt  conf5.csv  conf5.txt  conf6.csv  conf6.txt  conf7.csv  conf7.txt  conf8.csv  conf8.txt  extract_data.sh  plot.py  (+1 more)
Vivado/: constraints.xdc  create_evo_project.tcl  create_project.tcl  run_evo_sim.tcl  run_sim.tcl  tb_evo_neuron_4dpa.vhd  tb_neuron_4dpa.vhd
cmake/: vhdl_macros.cmake
doc/: neuromesh.drawio  neuromesh_input_reuse.drawio  neuromesh_weight_reuse.drawio  neuron.drawio  neuron_processing.drawio
evo_script/: configs.txt  extract_power.sh  extract_utilization.sh  generate_all_sources.sh  generate_sources_4_characterization.sh
scripts/: configs.txt  extract_data.sh  extract_power.sh  extract_utilization.sh  generate_all_sources.sh  generate_sources_4_characterization.sh  run_all.sh
src/: CMakeLists.txt  generic_register.vhd  utils.vhd
src/math/: CMakeLists.txt  adder.vhd  full_adder.vhd  multiplier.vhd  piped_adder.vhd  sum_reduct.vhd  wired_shift.vhd
src/mem/: CMakeLists.txt  generic_register.vhd  pipe_delay.vhd  piso_register.vhd  sipo_register.vhd
src/nn/: CMakeLists.txt  data_types.vhd
src/nn/cells/: CMakeLists.txt  activation.vhd  data_types.vhd  neuron.vhd  weighted_sum.vhd
src/nn/layers/: CMakeLists.txt  neuromesh.vhd
test/: CMakeLists.txt  debug_func.vhd  tb_activation.vhd  tb_adder.vhd  tb_approx_adder.vhd  tb_approx_multiplier.vhd  tb_approx_neuron.vhd  tb_approx_weighted_sum.vhd  tb_multiplier.vhd  tb_neuromesh_1i2w_linear.vhd  tb_neuromesh_1i2w_rect.vhd  tb_neuromesh_2i1w_linear.vhd  tb_neuromesh_lenet5_fc2.vhd  tb_neuromesh_single.vhd  tb_neuromesh_single_linear.vhd  tb_neuromesh_single_rect.vhd  tb_neuron.vhd  tb_neuron_4dpa.vhd  tb_neuron_pipelining.vhd  tb_neuron_pipelining_oracle.txt  tb_neuron_scomposto.vhd  tb_piped_adder.vhd  tb_sum_reduct.vhd  tb_weighted_sum.vhd  tb_wired_shift.vhd
test/oracles/: CMakeLists.txt  build.sh  tb_activation.cc  tb_approx_adder.cc  tb_approx_multiplier.cc  tb_approx_neuron.cc  tb_approx_weighted_sum.cc  tb_conv_layer.cc  tb_neuromesh_1i2w_linear.cc  tb_neuromesh_1i2w_rect.cc  tb_neuromesh_2i1w_linear.cc  tb_neuromesh_2i1w_rect.cc  tb_neuromesh_lenet5_fc2.cc  tb_neuromesh_single_linear.cc  tb_neuromesh_single_rect.cc  tb_neuron.cc  tb_neuron_scomposto.cc  tb_weighted_sum.cc  tb_wired_shift.cc  trunc.cc  trunc.h
test/oracles/tb_neuromesh_lenet5_conv1/: conv1.cc  main.cc
test/oracles/tb_neuromesh_lenet5_conv2/: conv2.cc
(+151 files in other folders)
